--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compteur de Points - Pétanque</title>
-  <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
-  </script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Compteur de Points - Pétanque</h1>
@@ -21,17 +16,20 @@
       <option value="2">Doublette (2 vs 2)</option>
       <option value="3">Triplette (3 vs 3)</option>
     </select>
-
-    <div id="players"></div>
-
+    <div id="players">
+     <div id="team1Inputs" class="team-inputs">
+       <h3>Équipe 1</h3>
+     </div>
+     <div id="team2Inputs" class="team-inputs">
+       <h3>Équipe 2</h3>
+     </div>
+    </div>
     <button type="button" onclick="startGame()">Démarrer la partie</button>
     <button type="button" onclick="shuffleTeams()">Créer équipes aléatoirement</button>
   </div>
 
   <div id="game" class="hidden">
     <h2>Partie en cours</h2>
-    <div id="teamNames" class="teams-container team-names"></div>
-
     <div class="score-section">
       <div class="team-score team1">
         <h3 class="team1">Équipe 1</h3>
@@ -49,14 +47,18 @@
 
     <div class="scoreboard">
       <button type="button" onclick="addScores()">Ajouter la mène</button>
-      <p id="rounds"></p>
-      <div id="winnerMessage" class="winner hidden"></div>
-      <div id="statistics" class="stats hidden"></div>
       <button type="button" onclick="newMatch()">Nouvelle manche</button>
       <button type="button" onclick="resetGame()">Recommencer la partie</button>
+      <p id="rounds"></p>
+      <div id="winnerMessage" class="winner hidden"></div>
     </div>
   </div>
 
   <script src="script.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+  </script>
 </body>
 </html>
