--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Compteur de Points - Pétanque</h1>
+  <h1>Compteur Points </h1>
   <div id="setup">
     <h2>Choisir le mode</h2>
     <select id="gameMode">
@@ -56,9 +56,12 @@
 
   <script src="script.js"></script>
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('Service Worker enregistré'))
+      .catch(err => console.error('Erreur Service Worker:', err));
+  }
   </script>
+
 </body>
 </html>
