--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compteur de Points - Pétanque</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json?v=2" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -48,7 +48,8 @@
     <div class="scoreboard">
       <button type="button" onclick="addScores()">Ajouter la mène</button>
       <button type="button" onclick="newMatch()">Nouvelle manche</button>
-      <button type="button" onclick="resetGame()">Recommencer la partie</button>
+      <button type="button" onclick="newFullGame()">Nouvelle Partie</button>
+      <!--//<button type="button" onclick="resetGame()">Recommencer la partie</button>-->
       <p id="rounds"></p>
       <div id="winnerMessage" class="winner hidden"></div>
     </div>
